--- a/HighSchoolFish/View/CommentTableHeaderView.xib
+++ b/HighSchoolFish/View/CommentTableHeaderView.xib
@@ -1,18 +1,169 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+        <view contentMode="scaleToFill" id="iN0-l3-epB" customClass="CommentTableHeaderView" customModule="HighSchoolFish" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="420" height="258"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-            <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
+            <subviews>
+                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="NVy-dr-1jD">
+                    <rect key="frame" x="16" y="16" width="30" height="30"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="30" id="kDZ-j6-FVZ"/>
+                        <constraint firstAttribute="width" constant="30" id="vWF-HV-YI4"/>
+                    </constraints>
+                </imageView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hnX-T9-NJe">
+                    <rect key="frame" x="56" y="16" width="348" height="15"/>
+                    <subviews>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0dn-Lt-anz">
+                            <rect key="frame" x="5" y="0.66666666666666785" width="34.333333333333336" height="14.333333333333334"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                            <nil key="textColor"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="M17-Tp-6jG">
+                            <rect key="frame" x="43.333333333333329" y="1.6666666666666679" width="21" height="12"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                            <color key="textColor" name="gray"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="bottom" secondItem="0dn-Lt-anz" secondAttribute="bottom" id="7wR-1p-OFN"/>
+                        <constraint firstItem="M17-Tp-6jG" firstAttribute="leading" secondItem="0dn-Lt-anz" secondAttribute="trailing" constant="4" id="CMm-gf-4D5"/>
+                        <constraint firstItem="M17-Tp-6jG" firstAttribute="centerY" secondItem="hnX-T9-NJe" secondAttribute="centerY" id="VUC-K9-wLk"/>
+                        <constraint firstAttribute="height" constant="15" id="qqV-ZE-9oR"/>
+                        <constraint firstItem="0dn-Lt-anz" firstAttribute="leading" secondItem="hnX-T9-NJe" secondAttribute="leading" constant="5" id="qzf-HU-HsW"/>
+                    </constraints>
+                </view>
+                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KbC-5P-Fuf">
+                    <rect key="frame" x="56" y="41.000000000000007" width="308" height="77.666666666666686"/>
+                    <string key="text">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리 나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세 달콤한 색감이 물들어 조금씩 정신을 차렸을 땐 알아볼 수도 없지가득찬 마음이동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리 나라만세 무궁화 삼천리 화려</string>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <nil key="textColor"/>
+                    <nil key="highlightedColor"/>
+                </label>
+                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" lineBreakMode="middleTruncation" pointerInteraction="YES" translatesAutoresizingMaskIntoConstraints="NO" id="9ZB-4K-pYu">
+                    <rect key="frame" x="56" y="128.66666666666666" width="50" height="20"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="50" id="Sl6-Jw-rYg"/>
+                        <constraint firstAttribute="height" constant="20" id="Vs5-BN-1PK"/>
+                    </constraints>
+                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                    <state key="normal" title="답글 쓰기">
+                        <color key="titleColor" name="gray"/>
+                    </state>
+                </button>
+                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="yqI-U3-tfH">
+                    <rect key="frame" x="374" y="41" width="30" height="31.666666666666671"/>
+                    <subviews>
+                        <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ctU-b0-yD9">
+                            <rect key="frame" x="0.0" y="0.0" width="30" height="22"/>
+                            <color key="tintColor" name="gray"/>
+                            <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                            <state key="normal" image="heart.fill" catalog="system">
+                                <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                            </state>
+                            <connections>
+                                <action selector="headerLikeButtonTapped" destination="iN0-l3-epB" eventType="touchUpInside" id="r8g-xp-hZW"/>
+                            </connections>
+                        </button>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pp2-bc-Nzl">
+                            <rect key="frame" x="0.0" y="22" width="30" height="9.6666666666666643"/>
+                            <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                            <color key="textColor" name="gray"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="30" id="QyT-3l-fMa"/>
+                    </constraints>
+                </stackView>
+                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kqb-3S-RAO">
+                    <rect key="frame" x="56" y="153.66666666666666" width="120" height="88.333333333333343"/>
+                    <subviews>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Q3c-O9-ZxN">
+                            <rect key="frame" x="0.0" y="43.666666666666686" width="30" height="1"/>
+                            <color key="backgroundColor" name="gray"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="1" id="37n-vc-dh2"/>
+                                <constraint firstAttribute="width" constant="30" id="A3J-1R-eeP"/>
+                            </constraints>
+                        </view>
+                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="답글 1개" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ItH-qq-zb7">
+                            <rect key="frame" x="35" y="37" width="40.333333333333343" height="14.333333333333336"/>
+                            <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                            <color key="textColor" name="gray"/>
+                            <nil key="highlightedColor"/>
+                        </label>
+                    </subviews>
+                    <color key="backgroundColor" systemColor="tableBackgroundColor"/>
+                    <constraints>
+                        <constraint firstAttribute="width" constant="120" id="6Aj-ds-zwc"/>
+                        <constraint firstItem="Q3c-O9-ZxN" firstAttribute="centerY" secondItem="kqb-3S-RAO" secondAttribute="centerY" id="Liy-Oo-3JC"/>
+                        <constraint firstItem="ItH-qq-zb7" firstAttribute="centerY" secondItem="kqb-3S-RAO" secondAttribute="centerY" id="Oxt-GI-SnF"/>
+                        <constraint firstItem="ItH-qq-zb7" firstAttribute="leading" secondItem="Q3c-O9-ZxN" secondAttribute="trailing" constant="5" id="XVS-ou-bML"/>
+                        <constraint firstItem="Q3c-O9-ZxN" firstAttribute="leading" secondItem="kqb-3S-RAO" secondAttribute="leading" id="vwQ-bI-OXU"/>
+                    </constraints>
+                </view>
+            </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
+            <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+            <constraints>
+                <constraint firstAttribute="trailing" secondItem="hnX-T9-NJe" secondAttribute="trailing" constant="16" id="4vK-X2-kER"/>
+                <constraint firstItem="NVy-dr-1jD" firstAttribute="leading" secondItem="iN0-l3-epB" secondAttribute="leading" constant="16" id="6yf-PS-0zp"/>
+                <constraint firstItem="9ZB-4K-pYu" firstAttribute="top" secondItem="KbC-5P-Fuf" secondAttribute="bottom" constant="10" id="HXw-ql-PtH"/>
+                <constraint firstItem="yqI-U3-tfH" firstAttribute="leading" secondItem="KbC-5P-Fuf" secondAttribute="trailing" constant="10" id="Ok0-Xr-OER"/>
+                <constraint firstItem="kqb-3S-RAO" firstAttribute="leading" secondItem="KbC-5P-Fuf" secondAttribute="leading" id="RWv-SP-lzp"/>
+                <constraint firstItem="kqb-3S-RAO" firstAttribute="top" secondItem="9ZB-4K-pYu" secondAttribute="bottom" constant="5" id="XF3-7r-rRo"/>
+                <constraint firstItem="9ZB-4K-pYu" firstAttribute="leading" secondItem="KbC-5P-Fuf" secondAttribute="leading" id="c6W-rv-ASe"/>
+                <constraint firstItem="yqI-U3-tfH" firstAttribute="top" secondItem="KbC-5P-Fuf" secondAttribute="top" id="eBV-4h-dMf"/>
+                <constraint firstItem="hnX-T9-NJe" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="f39-hU-Orj"/>
+                <constraint firstItem="NVy-dr-1jD" firstAttribute="top" secondItem="iN0-l3-epB" secondAttribute="top" constant="16" id="nMK-9b-8Ty"/>
+                <constraint firstItem="KbC-5P-Fuf" firstAttribute="top" secondItem="hnX-T9-NJe" secondAttribute="bottom" constant="10" id="nVF-9O-QK3"/>
+                <constraint firstItem="hnX-T9-NJe" firstAttribute="leading" secondItem="NVy-dr-1jD" secondAttribute="trailing" constant="10" id="rc1-uv-yOH"/>
+                <constraint firstItem="KbC-5P-Fuf" firstAttribute="leading" secondItem="hnX-T9-NJe" secondAttribute="leading" id="sWk-t9-92E"/>
+                <constraint firstAttribute="bottom" secondItem="kqb-3S-RAO" secondAttribute="bottom" constant="16" id="xJo-Je-oAN"/>
+                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="yqI-U3-tfH" secondAttribute="trailing" constant="16" id="y3V-AI-BwN"/>
+            </constraints>
+            <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
+            <connections>
+                <outlet property="commentWriteButton" destination="9ZB-4K-pYu" id="MjY-MD-TgW"/>
+                <outlet property="contextLabel" destination="KbC-5P-Fuf" id="74T-AR-yfD"/>
+                <outlet property="likeButton" destination="ctU-b0-yD9" id="vto-vC-2e2"/>
+                <outlet property="likeCountLabel" destination="Pp2-bc-Nzl" id="KZ8-SF-wTj"/>
+                <outlet property="nameLabel" destination="0dn-Lt-anz" id="G5d-f7-j8a"/>
+                <outlet property="profileImage" destination="NVy-dr-1jD" id="jxR-UC-JE4"/>
+                <outlet property="showMoreView" destination="kqb-3S-RAO" id="Hky-aA-sMk"/>
+                <outlet property="timeLabel" destination="M17-Tp-6jG" id="VAm-Zb-2Fz"/>
+            </connections>
+            <point key="canvasLocation" x="309.92366412213738" y="46.478873239436624"/>
         </view>
     </objects>
+    <resources>
+        <image name="heart.fill" catalog="system" width="128" height="107"/>
+        <image name="profileIcon" width="110" height="110"/>
+        <namedColor name="gray">
+            <color red="0.72549019607843135" green="0.72549019607843135" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="tableBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
