--- a/HighSchoolFish/View/CommentTableViewCell.xib
+++ b/HighSchoolFish/View/CommentTableViewCell.xib
@@ -1,21 +1,133 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="13142" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="22155" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+    <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12042"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22131"/>
+        <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="KGk-i7-Jjw" customClass="CommentTableViewCell" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="CommentTableViewCell" rowHeight="142" id="KGk-i7-Jjw" customClass="CommentTableViewCell" customModule="HighSchoolFish" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="415" height="142"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="43"/>
+                <rect key="frame" x="0.0" y="0.0" width="415" height="142"/>
                 <autoresizingMask key="autoresizingMask"/>
+                <subviews>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="profileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="GmG-xx-QkO">
+                        <rect key="frame" x="40" y="16" width="30" height="30"/>
+                        <constraints>
+                            <constraint firstAttribute="width" constant="30" id="PbW-9c-riI"/>
+                            <constraint firstAttribute="height" constant="30" id="UGF-o7-NqN"/>
+                        </constraints>
+                    </imageView>
+                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="daq-xQ-ooI">
+                        <rect key="frame" x="80" y="16" width="319" height="15"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Name" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6Th-vF-OnM">
+                                <rect key="frame" x="5" y="0.0" width="34.333333333333336" height="15"/>
+                                <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="12"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="time" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="emJ-Se-EGW">
+                                <rect key="frame" x="43.333333333333329" y="1.6666666666666679" width="21" height="12"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                <color key="textColor" name="gray"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="6Th-vF-OnM" firstAttribute="top" secondItem="daq-xQ-ooI" secondAttribute="top" id="AM7-wd-o3A"/>
+                            <constraint firstItem="emJ-Se-EGW" firstAttribute="centerY" secondItem="daq-xQ-ooI" secondAttribute="centerY" id="Zti-Sk-gXu"/>
+                            <constraint firstAttribute="bottom" secondItem="6Th-vF-OnM" secondAttribute="bottom" id="fde-Z6-17w"/>
+                            <constraint firstAttribute="height" constant="15" id="kID-Js-gGQ"/>
+                            <constraint firstItem="6Th-vF-OnM" firstAttribute="leading" secondItem="daq-xQ-ooI" secondAttribute="leading" constant="5" id="xoN-UR-wLa"/>
+                            <constraint firstItem="emJ-Se-EGW" firstAttribute="leading" secondItem="6Th-vF-OnM" secondAttribute="trailing" constant="4" id="zQc-Iw-mfQ"/>
+                        </constraints>
+                    </view>
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xjA-pe-Spl">
+                        <rect key="frame" x="80" y="41" width="287.33333333333331" height="55"/>
+                        <string key="text">동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리 나라만세 무궁화 삼천리 화려강산 대한사람 대한으로 길이 보전하세 달콤한 색감이 물들어 조금씩 정신을 차렸을 땐 알아볼 수도 없지가득찬 마음이동해물과 백두산이 마르고 닳도록 하느님이 보우하사 우리 나라만세 무궁화 삼천리 화려</string>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <nil key="textColor"/>
+                        <nil key="highlightedColor"/>
+                    </label>
+                    <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="szA-Xs-gT1">
+                        <rect key="frame" x="377.33333333333331" y="41" width="21.666666666666686" height="31.666666666666671"/>
+                        <subviews>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="sWg-Vw-sep">
+                                <rect key="frame" x="0.0" y="0.0" width="21.666666666666668" height="22"/>
+                                <color key="tintColor" name="gray"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="heart.fill" catalog="system">
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                </state>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ozF-O9-Aly">
+                                <rect key="frame" x="0.0" y="22" width="21.666666666666668" height="9.6666666666666643"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="8"/>
+                                <color key="textColor" name="gray"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                    </stackView>
+                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Tnw-8h-INL">
+                        <rect key="frame" x="80" y="106" width="50" height="20"/>
+                        <constraints>
+                            <constraint firstAttribute="height" constant="20" id="JbK-e4-WHG"/>
+                            <constraint firstAttribute="width" constant="50" id="tM4-9S-kE8"/>
+                        </constraints>
+                        <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                        <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                        <state key="normal" title="답글 쓰기">
+                            <color key="titleColor" name="gray"/>
+                        </state>
+                    </button>
+                </subviews>
+                <constraints>
+                    <constraint firstItem="xjA-pe-Spl" firstAttribute="leading" secondItem="daq-xQ-ooI" secondAttribute="leading" id="QJw-9j-Suz"/>
+                    <constraint firstAttribute="trailing" secondItem="daq-xQ-ooI" secondAttribute="trailing" constant="16" id="Rzw-Mk-XC9"/>
+                    <constraint firstItem="szA-Xs-gT1" firstAttribute="leading" secondItem="xjA-pe-Spl" secondAttribute="trailing" constant="10" id="WyK-g0-JpB"/>
+                    <constraint firstItem="GmG-xx-QkO" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="16" id="Xhz-zr-ymI"/>
+                    <constraint firstItem="Tnw-8h-INL" firstAttribute="leading" secondItem="xjA-pe-Spl" secondAttribute="leading" id="dh4-Et-WkW"/>
+                    <constraint firstItem="GmG-xx-QkO" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="40" id="exz-ah-dj8"/>
+                    <constraint firstAttribute="bottom" secondItem="Tnw-8h-INL" secondAttribute="bottom" constant="16" id="kJw-fQ-Adf"/>
+                    <constraint firstItem="xjA-pe-Spl" firstAttribute="top" secondItem="daq-xQ-ooI" secondAttribute="bottom" constant="10" id="lnQ-A2-Q1d"/>
+                    <constraint firstItem="daq-xQ-ooI" firstAttribute="top" secondItem="GmG-xx-QkO" secondAttribute="top" id="ndR-Iw-7ji"/>
+                    <constraint firstItem="szA-Xs-gT1" firstAttribute="top" secondItem="xjA-pe-Spl" secondAttribute="top" id="wv2-bX-lLO"/>
+                    <constraint firstItem="Tnw-8h-INL" firstAttribute="top" secondItem="xjA-pe-Spl" secondAttribute="bottom" constant="10" id="xco-Je-QhK"/>
+                    <constraint firstItem="daq-xQ-ooI" firstAttribute="leading" secondItem="GmG-xx-QkO" secondAttribute="trailing" constant="10" id="xjU-NO-jm1"/>
+                    <constraint firstAttribute="trailing" secondItem="szA-Xs-gT1" secondAttribute="trailing" constant="16" id="zPY-0o-KoV"/>
+                </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
+            <connections>
+                <outlet property="commentWriteButton" destination="Tnw-8h-INL" id="CCP-lh-qCP"/>
+                <outlet property="contextLabel" destination="xjA-pe-Spl" id="lUG-DH-Fr1"/>
+                <outlet property="likeButton" destination="sWg-Vw-sep" id="noc-Ca-GRW"/>
+                <outlet property="likeCountLabel" destination="ozF-O9-Aly" id="twr-1H-PUJ"/>
+                <outlet property="nameLabel" destination="6Th-vF-OnM" id="CRd-9r-iTq"/>
+                <outlet property="profileImage" destination="GmG-xx-QkO" id="spY-7H-9EA"/>
+                <outlet property="timeLabel" destination="emJ-Se-EGW" id="Hie-K3-zYt"/>
+            </connections>
+            <point key="canvasLocation" x="225.19083969465649" y="89.436619718309871"/>
         </tableViewCell>
     </objects>
+    <resources>
+        <image name="heart.fill" catalog="system" width="128" height="107"/>
+        <image name="profileIcon" width="110" height="110"/>
+        <namedColor name="gray">
+            <color red="0.72549019607843135" green="0.72549019607843135" blue="0.72549019607843135" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+    </resources>
 </document>
