--- a/HighSchoolFish/View/NoticeListTableViewCell.xib
+++ b/HighSchoolFish/View/NoticeListTableViewCell.xib
@@ -11,20 +11,20 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NoticeListTableViewCell" rowHeight="74" id="KGk-i7-Jjw" customClass="NoticeListTableViewCell" customModule="HighSchoolFish" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="NoticeListTableViewCell" rowHeight="77" id="KGk-i7-Jjw" customClass="NoticeListTableViewCell" customModule="HighSchoolFish" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="320" height="77"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
-                <rect key="frame" x="0.0" y="0.0" width="320" height="74"/>
+                <rect key="frame" x="0.0" y="0.0" width="320" height="77"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="날짜" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NtJ-7t-i7f">
-                        <rect key="frame" x="16" y="47" width="288" height="17"/>
+                        <rect key="frame" x="16" y="49.333333333333336" width="288" height="17.666666666666664"/>
                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                         <color key="textColor" name="darkGray"/>
                         <nil key="highlightedColor"/>
                     </label>
-                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="공지사항 제목 자리" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zO4-dY-eW5">
+                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" text="공지사항 제목 자리" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zO4-dY-eW5">
                         <rect key="frame" x="16" y="9.9999999999999982" width="288" height="19.333333333333329"/>
                         <fontDescription key="fontDescription" type="system" pointSize="16"/>
                         <nil key="textColor"/>
@@ -34,14 +34,19 @@
                 <constraints>
                     <constraint firstAttribute="trailing" secondItem="NtJ-7t-i7f" secondAttribute="trailing" constant="16" id="3v1-5X-xVk"/>
                     <constraint firstItem="zO4-dY-eW5" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="ChA-vd-eWT"/>
+                    <constraint firstItem="NtJ-7t-i7f" firstAttribute="top" secondItem="zO4-dY-eW5" secondAttribute="bottom" constant="20" id="KEu-C9-JgW"/>
+                    <constraint firstAttribute="bottom" secondItem="NtJ-7t-i7f" secondAttribute="bottom" constant="10" id="OLT-9z-Bj6"/>
                     <constraint firstItem="NtJ-7t-i7f" firstAttribute="leading" secondItem="H2p-sc-9uM" secondAttribute="leading" constant="16" id="SqG-OM-Azq"/>
                     <constraint firstAttribute="trailing" secondItem="zO4-dY-eW5" secondAttribute="trailing" constant="16" id="UqR-88-kQa"/>
                     <constraint firstItem="zO4-dY-eW5" firstAttribute="top" secondItem="H2p-sc-9uM" secondAttribute="top" constant="10" id="gdL-A0-vJT"/>
-                    <constraint firstAttribute="bottom" secondItem="NtJ-7t-i7f" secondAttribute="bottom" constant="10" id="omZ-Dp-Hnj"/>
                 </constraints>
             </tableViewCellContentView>
             <viewLayoutGuide key="safeArea" id="njF-e1-oar"/>
-            <point key="canvasLocation" x="-27.480916030534349" y="61.267605633802823"/>
+            <connections>
+                <outlet property="noticeDateLabel" destination="NtJ-7t-i7f" id="NqH-k9-sD9"/>
+                <outlet property="noticeTitleLabel" destination="zO4-dY-eW5" id="TUr-XE-F0d"/>
+            </connections>
+            <point key="canvasLocation" x="-27.480916030534349" y="62.323943661971832"/>
         </tableViewCell>
     </objects>
     <resources>
